--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -168,3 +168,17 @@ footer {
 p.copyright {
     margin: 15px 0 0;
 }
+
+.btn-lg {
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.3333333;
+    border-radius: 6px;
+    margin: 10px;
+}
+
+.list-inline>li {
+    display: inherit
+    padding-right: 5px;
+    padding-left: 5px;
+} 
